--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,26 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+*.mdc
+.cursor
+
+# 환경 변수 파일
+.env
+.env.local
+.env.development
+.env.production
+
+# Firebase Admin SDK 관련 (예: 서비스 계정 키 파일)
+bizmo-8cbf1-firebase-adminsdk-*.json
+
+# Requirements
+requirements
+
+# Firebase Functions Code (벡엔드 레포지토리에 올라갈 코드)
+naver_oath
+
+# Firebase 캐시 디렉토리 무시
+.firebase
+
+# Firebase 캐시 파일 무시
+.firebase/
