Feat: "Firestore 설정 추가 (벡엔드 분리 전)"

--- a/firebase.json
+++ b/firebase.json
@@ -26,5 +26,9 @@
       ],
       "predeploy": []
     }
-  ]
+  ],
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  }
 }
