Chore: "의존성 패키지 및 환경 설정 파일 업데이트"
package.json 및 package-lock.json 패키지 버전 업데이트 및 .gitignore 파일 설정 변경

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,9 @@ naver_oath
 
 # Firebase 캐시 파일 무시
 .firebase/
+
+# Firebase 인덱스 파일 무시
+firestore.indexes.json
+
+# Firebase 규칙 파일 무시
+firestore.rules
